<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TipsActivity">

    <TextView
        android:id="@+id/confTipHeading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:drawableStart="@drawable/ic_insert_emoticon_blue_24dp"
        android:drawablePadding="12dp"
        android:text="@string/conf_tip_heading"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overTipBody2" />

    <TextView
        android:id="@+id/overTipBody2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:drawableStart="@drawable/ic_chat_black_24dp"
        android:drawablePadding="12dp"
        android:text="@string/over_tip_body_2"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overTipBody1" />

    <TextView
        android:id="@+id/overTipBody1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:drawableStart="@drawable/ic_chat_black_24dp"
        android:drawablePadding="12dp"
        android:text="@string/over_tip_body_1"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overwhelmedTipHeading" />

    <TextView
        android:id="@+id/confTipBody1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:drawableStart="@drawable/ic_chat_black_24dp"
        android:drawablePadding="12dp"
        android:text="@string/conf_tip_body"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confTipHeading" />

    <TextView
        android:id="@+id/overwhelmedTipHeading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:drawableStart="@drawable/ic_insert_emoticon_pink_24dp"
        android:drawablePadding="12dp"
        android:text="@string/over_tip_heading"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anxietyTipBody2" />

    <TextView
        android:id="@+id/appLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_done_all_logo_24dp"
        android:drawablePadding="6dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Caption"
        app:layout_constraintEnd_toEndOf="@+id/tipsMainHeading"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tipsMainHeading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:text="@string/tips_main_heading"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline6"
        android:drawableStart="@drawable/ic_spa_24dp"
        android:drawablePadding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/anxietyTipHeading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:drawableStart="@drawable/ic_insert_emoticon_green_24dp"
        android:drawablePadding="12dp"
        android:text="@string/anxiety_tip_heading"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipsMainHeading" />

    <TextView
        android:id="@+id/anxietyTipBody1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:drawableStart="@drawable/ic_chat_black_24dp"
        android:drawablePadding="12dp"
        android:text="@string/anxiety_tip_body_1"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anxietyTipHeading" />

    <TextView
        android:id="@+id/anxietyTipBody2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:drawableStart="@drawable/ic_chat_black_24dp"
        android:drawablePadding="12dp"
        android:text="@string/anxiety_tip_body_2"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anxietyTipBody1" />


</androidx.constraintlayout.widget.ConstraintLayout>