<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".fragments.TasksMainFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/taskInputTextFieldLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        app:startIconDrawable="@drawable/ic_add_black_24dp"
        app:startIconContentDescription="@string/task_input_start_icon"
        app:endIconMode="clear_text"
        android:hint="@string/task_input_label"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/taskInputTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/taskImportantCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/task_priority_check"
        app:layout_constraintStart_toStartOf="@+id/taskInputTextFieldLayout"
        app:layout_constraintTop_toBottomOf="@+id/taskInputTextFieldLayout" />

    <Button
        android:id="@+id/addTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add_button"
        style="?attr/materialButtonOutlinedStyle"
        app:layout_constraintEnd_toEndOf="@+id/taskInputTextFieldLayout"
        app:layout_constraintTop_toBottomOf="@+id/taskInputTextFieldLayout" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/adviceCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTaskButton"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintTop_toBottomOf="@+id/addTaskButton">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_spa_16dp"
                android:drawablePadding="6dp"
                android:text="@string/advice_card_text"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/taskListHeadingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/task_list_heading"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adviceCardView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/taskListRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskListHeadingTextView" />

    <TextView
        android:id="@+id/appLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_done_all_logo_24dp"
        android:drawablePadding="6dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Caption"
        app:layout_constraintEnd_toEndOf="@+id/taskInputTextFieldLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/resetButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="82dp"
        android:layout_height="33dp"
        android:layout_marginBottom="12dp"
        android:text="@string/reset_button"
        android:textColor="#A9A9AA"
        app:layout_constraintBottom_toTopOf="@+id/taskListRecyclerView"
        app:layout_constraintEnd_toEndOf="@+id/taskListRecyclerView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/addTaskButton" />


</androidx.constraintlayout.widget.ConstraintLayout>
