<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AlarmMainFragment" >

    <TextView
        android:id="@+id/alarmInstructionHeading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:text="@string/set_alarm_instruction_heading"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline6"
        android:drawableStart="@drawable/ic_lightbulb_outline_24dp"
        android:drawablePadding="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/alarmInstructionBody"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/set_alarm_instruction_body"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alarmInstructionHeading" />

    <TimePicker
        android:id="@+id/alarmTimePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:timePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alarmIndicatorTextView" />

    <View
        android:id="@+id/alarmSetterDivider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alarmInstructionBody" />

    <TextView
        android:id="@+id/alarmIndicatorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:drawableStart="@drawable/ic_alarm_on_primary_24dp"
        android:drawablePadding="6dp"
        android:text="@string/set_alarm_indicator"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alarmSetterDivider" />

    <Button
        android:id="@+id/setAlarmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="127dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="127dp"
        android:text="@string/set_alarm_button"
        style="?attr/materialButtonOutlinedStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alarmTimePicker" />

    <TextView
        android:id="@+id/appLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_done_all_logo_24dp"
        android:drawablePadding="6dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Caption"
        app:layout_constraintEnd_toEndOf="@+id/alarmInstructionHeading"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>